fix white on white text in dark mode

--- a/frontend/src/overview/map/spot-map/per-category/MswSpotMapPerCategory.scss
+++ b/frontend/src/overview/map/spot-map/per-category/MswSpotMapPerCategory.scss
@@ -3,3 +3,7 @@
   height: 500px;
   margin: auto;
 }
+
+.info-window-content {
+  color: black;
+}
